@@ -296,20 +296,20 @@
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                                <div class="carrier-lines-checked">Casualty</div>
+                                <div class="carrier-lines-checked">Aviation</div>
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                                <div class="carrier-lines-checked">Contingency</div>
-                                <div class="carrier-lines-checked">Directors & Officers</div>
+                                <div class="carrier-lines-checked">Commercial Package</div>
+                                <div class="carrier-lines-checked">Environmental</div>
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                                <div class="carrier-lines-checked">Excess Liability</div>
+                                <div class="carrier-lines-checked">Inland Marine</div>
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
-                                <div class="carrier-lines-checked">Reinsurance</div>
+                                <div class="carrier-lines-checked">Property</div>
                             </div>
                         </div>
 
@@ -326,65 +326,47 @@
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 toggle-boxes" style="display: none">
                                 <div class="checkbox">
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Accident & Health</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Agribusiness & Agriculture</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Aviation</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Boiler & Machinery</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Business Income</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Business Interruption</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Business Owners Policy</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Cargo</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Casualty</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Commercial Auto</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Commercial Flood</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Aviation</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Agriculture</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Auto</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Bonds</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Business Owners (BOP)</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Builders Risk</label>
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 toggle-boxes" style="display: none">
                                 <div class="checkbox">
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Commercial Property</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Commercial Umbrella</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Construction</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Contingency</label>
+
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Commercial Package</label>
                                     <label for=""><input class="" name="" id="" value="" type="checkbox">Credit Insurance</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Crime</label>
                                     <label for=""><input class="" name="" id="" value="" type="checkbox">Cyber Liability</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Directors & Officers</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Employers Liability</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Employment Practices Liability</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Employee Benefits</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Difference In Conditions (DIC)</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Environmental</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox"> Employments Practices Liability/Directors & Offices Liability (Management Liability)</label>
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 toggle-boxes" style="display: none">
                                 <div class="checkbox">
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Environmental</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Equine</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Equipment Breakdown</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Excess Liability</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Executive & Financial Risks</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Fiduciary Liability</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Foreign Package</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Flood</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Garage</label>
                                     <label for=""><input class="" name="" id="" value="" type="checkbox">General Liability</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Inland Marine</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">International</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Kidnap & Ransom</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Professional Liability (Architects & Engineers)</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Inland Marine</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Ocean Marine/Cargo</label>
                                 </div>
                             </div>
 
                             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 toggle-boxes" style="display: none">
                                 <div class="checkbox">
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Professional Liability (E&O)</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Professional Liability (Lawyers)</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Reinsurance</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Representations & Warranties</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Specie & Fine Art</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Supply Chain Risk</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Trade Credit & Political Risk</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Transportation</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">War & Terrorism</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Workers Compensation</label>
-                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Workplace Violence</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Professional Liability/E&O (A&E; Lawyers; Technology; Misc.)</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox" checked>Property</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Transportation/Truckers</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Travel Accident</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Umbrella/Excess Liability</label>
+                                    <label for=""><input class="" name="" id="" value="" type="checkbox">Workers' Compensation</label>
+
                                 </div>
                             </div>
                         </div>
