@@ -1,3 +1,6 @@
+## 2018-10-31
+• Updated lines of business list
+
 ## 2018-10-22
 • Created new sections within the website
 
